# minecraft

./: .gitignore  CMakeLists.txt  README.md
shaders/: CMakeLists.txt  triangle.frag  triangle.vert  triangle.vert.spv
src/: defines.h  log.c  log.h  main.c  pipeline.c  pipeline.h  vulkan.c  vulkan.h  vulkan_if.c  vulkan_if.h  window.c  window.h
